--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <p>Kopi dengan aroma lembut dan rasa asam yang khas, favorit banyak orang.</p>
       </div>
         <div class="menu-item">
-        <img src="https://images.unsplash.com/photo-1509042239860-f550ce710b93" alt="Cappuccino">
+        <img src="img/cappuccino.jpeg" alt="Cappuccino">
         <h3>Cappuccino</h3>
         <p>Espresso yang creamy dengan busa susu tebal di atasnya. Pas buat yang suka tekstur lembut dan hangat.</p>
         </div>
