--- a/index.html
+++ b/index.html
@@ -38,32 +38,32 @@
     <h2>Menu kopi Kami</h2>
     <div class="menu-grid">
       <div class="menu-item">
-        <img src="img/espresso.jpeg" alt="Espresso">
+        <img src="espresso.jpeg" alt="Espresso">
         <h3>Espresso</h3>
         <p>Rasa pahit yang kuat, cocok untuk penggila kopi sejati.</p>
       </div>
       <div class="menu-item">
-        <img src="img/latte.jpeg" alt="Latte">
+        <img src="latte.jpeg" alt="Latte">
         <h3>Latte</h3>
         <p>Perpaduan espresso dan susu yang creamy, pas untuk santai.</p>
       </div>
       <div class="menu-item">
-        <img src="img/americano.jpeg" alt="Americano">
+        <img src="americano.jpeg" alt="Americano">
         <h3>Americano</h3>
         <p>Kopi ringan dengan rasa khas dan aroma kuat.</p>
       </div>
       <div class="menu-item">
-        <img src="img/arabica.jpeg" alt="Americano">
+        <img src="arabica.jpeg" alt="Americano">
         <h3>Arabica</h3>
         <p>Kopi dengan aroma lembut dan rasa asam yang khas, favorit banyak orang.</p>
       </div>
         <div class="menu-item">
-        <img src="img/cappuccino.jpeg" alt="Cappuccino">
+        <img src="cappuccino.jpeg" alt="Cappuccino">
         <h3>Cappuccino</h3>
         <p>Espresso yang creamy dengan busa susu tebal di atasnya. Pas buat yang suka tekstur lembut dan hangat.</p>
         </div>
         <div class="menu-item">
-        <img src="img/mocha latte.jpeg" alt="Mocha Latte">
+        <img src="mocha latte.jpeg" alt="Mocha Latte">
         <h3>Mocha Latte</h3>
         <p>Kombinasi espresso, coklat, dan susu. Manis, kuat, dan cocok buat pecinta kopi & coklat.</p>
         </div>
