--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   <section class="section">
     <h2>Suasana Kami</h2>
     <p>Nikmati kopi sambil bersantai di suasana hangat dan nyaman.</p>
-    <img src="img/suasana.jpeg" alt="Suasana kafe">
+    <img src="suasana.jpeg" alt="Suasana kafe">
   </section>
   
 
@@ -94,7 +94,7 @@
  </section>
 
   <footer>
-    <p>&copy; 2025 Kopi Santuy. Semua Hak Dilindungi.</p>
+    <p>&copy; 2025 Nongki Santuy. Semua Hak Dilindungi.</p>
   </footer>
   <script>
     const faders = document.querySelectorAll('.fade-in');
