--- a/index.html
+++ b/index.html
@@ -38,32 +38,32 @@
     <h2>Menu kopi Kami</h2>
     <div class="menu-grid">
       <div class="menu-item">
-        <img src="img/espresso.jpeg" alt="Espresso">
+        <img src="espresso.jpeg" alt="Espresso">
         <h3>Espresso</h3>
         <p>Rasa pahit yang kuat, cocok untuk penggila kopi sejati.</p>
       </div>
       <div class="menu-item">
-        <img src="img/latte.jpeg" alt="Latte">
+        <img src="latte.jpeg" alt="Latte">
         <h3>Latte</h3>
         <p>Perpaduan espresso dan susu yang creamy, pas untuk santai.</p>
       </div>
       <div class="menu-item">
-        <img src="img/americano.jpeg" alt="Americano">
+        <img src="americano.jpeg" alt="Americano">
         <h3>Americano</h3>
         <p>Kopi ringan dengan rasa khas dan aroma kuat.</p>
       </div>
       <div class="menu-item">
-        <img src="img/arabica.jpeg" alt="Americano">
+        <img src="arabica.jpeg" alt="Americano">
         <h3>Arabica</h3>
         <p>Kopi dengan aroma lembut dan rasa asam yang khas, favorit banyak orang.</p>
       </div>
         <div class="menu-item">
-        <img src="https://images.unsplash.com/photo-1509042239860-f550ce710b93" alt="Cappuccino">
+        <img src="cappuccino.jpeg" alt="Cappuccino">
         <h3>Cappuccino</h3>
         <p>Espresso yang creamy dengan busa susu tebal di atasnya. Pas buat yang suka tekstur lembut dan hangat.</p>
         </div>
         <div class="menu-item">
-        <img src="img/mocha latte.jpeg" alt="Mocha Latte">
+        <img src="mocha latte.jpeg" alt="Mocha Latte">
         <h3>Mocha Latte</h3>
         <p>Kombinasi espresso, coklat, dan susu. Manis, kuat, dan cocok buat pecinta kopi & coklat.</p>
         </div>
@@ -74,7 +74,7 @@
   <section class="section">
     <h2>Suasana Kami</h2>
     <p>Nikmati kopi sambil bersantai di suasana hangat dan nyaman.</p>
-    <img src="img/suasana.jpeg" alt="Suasana kafe">
+    <img src="suasana.jpeg" alt="Suasana kafe">
   </section>
   
 
@@ -89,12 +89,12 @@
       <label for="message">Pesan</label>
       <textarea id="message" name="message" rows="4" placeholder="Ketik pesanmu di sini..." required></textarea>
       <button type="submit">Kirim Pesan</button>
-      <a href="https://wa.me/6281234567890" class="wa-button">Chat via WhatsApp</a>
+      <a href="https://wa.me/6289652773052" class="wa-button">Chat via WhatsApp</a>
     </form>
  </section>
 
   <footer>
-    <p>&copy; 2025 Kopi Santuy. Semua Hak Dilindungi.</p>
+    <p>&copy; 2025 Nongki Santuy. Semua Hak Dilindungi.</p>
   </footer>
   <script>
     const faders = document.querySelectorAll('.fade-in');
